# tree-sitter-ditto

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  queries
.github/: renovate.json
.github/workflows/: ci.yaml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm
queries-helix/: highlights.scm  injections.scm
rules/: comments.js  expressions.js  helpers.js  module.js  names.js  patterns.js  types.js
rules/expressions/: atoms.js  call.js  effect.js  function.js  if.js  let.js  literals.js  match.js  pipe.js  records.js
rules/module/: declarations.js  header.js
rules/types/: atoms.js  call.js  function.js  records.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: conditionals.txt  constructors.txt  effect.txt  foreign_declarations.txt  functions.txt  imports.txt  let_expressions.txt  literals.txt  match.txt  module_header.txt  operators.txt  record_access.txt  record_update.txt  type_alias_declarations.txt  type_declarations.txt  types.txt
test/corpus/expressions/: arrays.txt  builtins.txt  calls.txt  constructors.txt  effects.txt  floats.txt  functions.txt  if.txt  ints.txt  let.txt  match.txt  parens.txt  pipe.txt  strings.txt  variables.txt
test/highlight/: brackets.ditto  delimiters.ditto  functions.ditto  keywords-conditional.ditto  keywords-import.ditto  keywords.ditto  literals.ditto  members.ditto  module.ditto  namespace.ditto  operators.ditto  parameters.ditto  symbols.ditto  types.ditto  variables.ditto
(+17 files in other folders)
