[package]
name = "tree-sitter-ditto"
description = "Ditto grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = ["Jordan Mackie <jordan@nous.co>"]
keywords = ["ditto", "ditto-lang", "tree-sitter", "parser", "parsing", "lexer", "incremental"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ditto-lang/tree-sitter-ditto"
edition = "2018"
license = "BSD-3-Clause"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.0"

[build-dependencies]
cc = "1.0"
